@@ -18,7 +18,6 @@
  */
 package org.apache.pinot.broker.routing.instanceselector;
 
-import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Lists;
 import java.time.Instant;
@@ -30,7 +29,6 @@ import java.util.Map;
 import java.util.Set;
 import java.util.TreeMap;
 import java.util.concurrent.TimeUnit;
-import org.apache.commons.lang3.tuple.ImmutablePair;
 import org.apache.commons.lang3.tuple.Pair;
 import org.apache.helix.model.ExternalView;
 import org.apache.helix.model.IdealState;
@@ -143,7 +141,7 @@ public class StrictReplicaGroupInstanceSelectorTest {
     String oldSeg = "segment0";
     String newSeg = "segment1";
     List<Pair<String, Long>> segmentCreationTime =
-        ImmutableList.of(ImmutablePair.of(newSeg, _mutableClock.millis() - 100));
+        List.of(Pair.of(newSeg, _mutableClock.millis() - 100));
     createSegments(segmentCreationTime);
     Set<String> onlineSegments = ImmutableSet.of(oldSeg, newSeg);
 
@@ -155,8 +153,8 @@ public class StrictReplicaGroupInstanceSelectorTest {
     // Ideal states for two segments
     //   [segment0] -> [instance0:online, instance1:online]
     //   [segment1] -> [instance0:online, instance1:online]
-    Map<String, List<String>> idealSateMap = Map.ofEntries(Map.entry(oldSeg, ImmutableList.of(instance0, instance1)),
-        Map.entry(newSeg, ImmutableList.of(instance0, instance1)));
+    Map<String, List<String>> idealSateMap = Map.ofEntries(Map.entry(oldSeg, List.of(instance0, instance1)),
+        Map.entry(newSeg, List.of(instance0, instance1)));
     IdealState idealState = createIdealState(idealSateMap);
 
     // Set up external view:
@@ -164,8 +162,8 @@ public class StrictReplicaGroupInstanceSelectorTest {
     //   [segment0] -> [instance0:online, instance1:online]
     //   [segment1] -> [instance1:online]
     Map<String, List<Pair<String, String>>> externalViewMap = Map.ofEntries(
-        Map.entry(oldSeg, ImmutableList.of(ImmutablePair.of(instance0, ONLINE), ImmutablePair.of(instance1, ONLINE))),
-        Map.entry(newSeg, ImmutableList.of(ImmutablePair.of(instance1, ONLINE))));
+        Map.entry(oldSeg, List.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE))),
+        Map.entry(newSeg, List.of(Pair.of(instance1, ONLINE))));
     ExternalView externalView = createExternalView(externalViewMap);
 
     StrictReplicaGroupInstanceSelector strictReplicaGroupInstanceSelector =
@@ -216,7 +214,7 @@ public class StrictReplicaGroupInstanceSelectorTest {
     // Set segment1 as new segment
     String newSeg = "segment1";
     List<Pair<String, Long>> segmentCreationTime =
-        ImmutableList.of(ImmutablePair.of(newSeg, _mutableClock.millis() - 100));
+        List.of(Pair.of(newSeg, _mutableClock.millis() - 100));
     createSegments(segmentCreationTime);
     Set<String> onlineSegments = ImmutableSet.of(oldSeg, newSeg);
 
@@ -228,8 +226,8 @@ public class StrictReplicaGroupInstanceSelectorTest {
     // Ideal states for two segments
     //   [segment0] -> [instance0:online, instance1:online]
     //   [segment1] -> [instance0:online, instance1:online]
-    Map<String, List<String>> idealSateMap = Map.ofEntries(Map.entry(oldSeg, ImmutableList.of(instance0, instance1)),
-        Map.entry(newSeg, ImmutableList.of(instance0, instance1)));
+    Map<String, List<String>> idealSateMap = Map.ofEntries(Map.entry(oldSeg, List.of(instance0, instance1)),
+        Map.entry(newSeg, List.of(instance0, instance1)));
     IdealState idealState = createIdealState(idealSateMap);
 
     // Set up external view:
@@ -237,8 +235,8 @@ public class StrictReplicaGroupInstanceSelectorTest {
     //   [segment0] -> [instance0:online, instance1:online]
     //   [segment1] -> []
     Map<String, List<Pair<String, String>>> externalViewMap = Map.ofEntries(
-        Map.entry(oldSeg, ImmutableList.of(ImmutablePair.of(instance0, ONLINE), ImmutablePair.of(instance1, ONLINE))),
-        Map.entry(newSeg, ImmutableList.of()));
+        Map.entry(oldSeg, List.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE))),
+        Map.entry(newSeg, List.of()));
     ExternalView externalView = createExternalView(externalViewMap);
 
     StrictReplicaGroupInstanceSelector strictReplicaGroupInstanceSelector =
@@ -261,7 +259,7 @@ public class StrictReplicaGroupInstanceSelectorTest {
     selectionResult =
         strictReplicaGroupInstanceSelector.select(_brokerRequest, Lists.newArrayList(onlineSegments), requestId);
     assertEquals(selectionResult.getSegmentToInstanceMap(), expectedReplicaGroupInstanceSelectorResult);
-    assertEquals(selectionResult.getUnavailableSegments(), ImmutableList.of(oldSeg, newSeg));
+    assertEquals(selectionResult.getUnavailableSegments(), List.of(oldSeg, newSeg));
   }
 
   // Test that we mark new segment as old when we see error state.
@@ -272,7 +270,7 @@ public class StrictReplicaGroupInstanceSelectorTest {
     // Set segment1 as new segment
     String newSeg = "segment1";
     List<Pair<String, Long>> segmentCreationTime =
-        ImmutableList.of(ImmutablePair.of(newSeg, _mutableClock.millis() - 100));
+        List.of(Pair.of(newSeg, _mutableClock.millis() - 100));
     createSegments(segmentCreationTime);
     Set<String> onlineSegments = ImmutableSet.of(oldSeg, newSeg);
 
@@ -284,8 +282,8 @@ public class StrictReplicaGroupInstanceSelectorTest {
     // Ideal states for two segments
     //   [segment0] -> [instance0:online, instance1:online]
     //   [segment1] -> [instance0:online, instance1:online]
-    Map<String, List<String>> idealSateMap = Map.ofEntries(Map.entry(oldSeg, ImmutableList.of(instance0, instance1)),
-        Map.entry(newSeg, ImmutableList.of(instance0, instance1)));
+    Map<String, List<String>> idealSateMap = Map.ofEntries(Map.entry(oldSeg, List.of(instance0, instance1)),
+        Map.entry(newSeg, List.of(instance0, instance1)));
     IdealState idealState = createIdealState(idealSateMap);
 
     // Set up external view:
@@ -293,8 +291,8 @@ public class StrictReplicaGroupInstanceSelectorTest {
     //   [segment0] -> [instance0:online, instance1:online]
     //   [segment1] -> []
     Map<String, List<Pair<String, String>>> externalViewMap = Map.ofEntries(
-        Map.entry(oldSeg, ImmutableList.of(ImmutablePair.of(instance0, ONLINE), ImmutablePair.of(instance1, ONLINE))),
-        Map.entry(newSeg, ImmutableList.of()));
+        Map.entry(oldSeg, List.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE))),
+        Map.entry(newSeg, List.of()));
     ExternalView externalView = createExternalView(externalViewMap);
 
     StrictReplicaGroupInstanceSelector strictReplicaGroupInstanceSelector =
@@ -311,20 +309,20 @@ public class StrictReplicaGroupInstanceSelectorTest {
 
     // Report error instance for segment1 since segment1 becomes old and we should report the error.
     externalViewMap = Map.ofEntries(
-        Map.entry(oldSeg, ImmutableList.of(ImmutablePair.of(instance0, ONLINE), ImmutablePair.of(instance1, ONLINE))),
-        Map.entry(newSeg, ImmutableList.of(ImmutablePair.of(instance0, ERROR))));
+        Map.entry(oldSeg, List.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE))),
+        Map.entry(newSeg, List.of(Pair.of(instance0, ERROR))));
     externalView = createExternalView(externalViewMap);
     strictReplicaGroupInstanceSelector.onAssignmentChange(idealState, externalView, onlineSegments);
     expectedReplicaGroupInstanceSelectorResult = Map.ofEntries();
     selectionResult =
         strictReplicaGroupInstanceSelector.select(_brokerRequest, Lists.newArrayList(onlineSegments), requestId);
     assertEquals(selectionResult.getSegmentToInstanceMap(), expectedReplicaGroupInstanceSelectorResult);
-    assertEquals(selectionResult.getUnavailableSegments(), ImmutableList.of(oldSeg, newSeg));
+    assertEquals(selectionResult.getUnavailableSegments(), List.of(oldSeg, newSeg));
 
     // Get segment1 back online in instance1
     externalViewMap = Map.ofEntries(
-        Map.entry(oldSeg, ImmutableList.of(ImmutablePair.of(instance0, ONLINE), ImmutablePair.of(instance1, ONLINE))),
-        Map.entry(newSeg, ImmutableList.of(ImmutablePair.of(instance0, ERROR), ImmutablePair.of(instance1, ONLINE))));
+        Map.entry(oldSeg, List.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE))),
+        Map.entry(newSeg, List.of(Pair.of(instance0, ERROR), Pair.of(instance1, ONLINE))));
     externalView = createExternalView(externalViewMap);
     strictReplicaGroupInstanceSelector.onAssignmentChange(idealState, externalView, onlineSegments);
     expectedReplicaGroupInstanceSelectorResult =
@@ -343,7 +341,7 @@ public class StrictReplicaGroupInstanceSelectorTest {
     // Set segment1 as new segment
     String newSeg = "segment1";
     List<Pair<String, Long>> segmentCreationTime =
-        ImmutableList.of(ImmutablePair.of(newSeg, _mutableClock.millis() - 100));
+        List.of(Pair.of(newSeg, _mutableClock.millis() - 100));
     createSegments(segmentCreationTime);
     Set<String> onlineSegments = ImmutableSet.of(oldSeg, newSeg);
 
@@ -355,8 +353,8 @@ public class StrictReplicaGroupInstanceSelectorTest {
     // Ideal states for two segments
     //   [segment0] -> [instance0:online, instance1:online]
     //   [segment1] -> [instance0:online, instance1:online]
-    Map<String, List<String>> idealSateMap = Map.ofEntries(Map.entry(oldSeg, ImmutableList.of(instance0, instance1)),
-        Map.entry(newSeg, ImmutableList.of(instance0, instance1)));
+    Map<String, List<String>> idealSateMap = Map.ofEntries(Map.entry(oldSeg, List.of(instance0, instance1)),
+        Map.entry(newSeg, List.of(instance0, instance1)));
     IdealState idealState = createIdealState(idealSateMap);
 
     // Set up external view:
@@ -364,8 +362,8 @@ public class StrictReplicaGroupInstanceSelectorTest {
     //   [segment0] -> [instance0:online, instance1:online]
     //   [segment1] -> []
     Map<String, List<Pair<String, String>>> externalViewMap = Map.ofEntries(
-        Map.entry(oldSeg, ImmutableList.of(ImmutablePair.of(instance0, ONLINE), ImmutablePair.of(instance1, ONLINE))),
-        Map.entry(newSeg, ImmutableList.of()));
+        Map.entry(oldSeg, List.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE))),
+        Map.entry(newSeg, List.of()));
     ExternalView externalView = createExternalView(externalViewMap);
 
     StrictReplicaGroupInstanceSelector strictReplicaGroupInstanceSelector =
@@ -382,15 +380,15 @@ public class StrictReplicaGroupInstanceSelectorTest {
 
     // Segment1 is not old anymore with state converge.
     externalViewMap = Map.ofEntries(
-        Map.entry(oldSeg, ImmutableList.of(ImmutablePair.of(instance0, ONLINE), ImmutablePair.of(instance1, ONLINE))),
-        Map.entry(newSeg, ImmutableList.of(ImmutablePair.of(instance0, ONLINE), ImmutablePair.of(instance1, ONLINE))));
+        Map.entry(oldSeg, List.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE))),
+        Map.entry(newSeg, List.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE))));
     externalView = createExternalView(externalViewMap);
     strictReplicaGroupInstanceSelector.onAssignmentChange(idealState, externalView, onlineSegments);
 
     // Segment1 becomes unavailable.
     externalViewMap = Map.ofEntries(
-        Map.entry(oldSeg, ImmutableList.of(ImmutablePair.of(instance0, ONLINE), ImmutablePair.of(instance1, ONLINE))),
-        Map.entry(newSeg, ImmutableList.of()));
+        Map.entry(oldSeg, List.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE))),
+        Map.entry(newSeg, List.of()));
     externalView = createExternalView(externalViewMap);
     strictReplicaGroupInstanceSelector.onAssignmentChange(idealState, externalView, onlineSegments);
 
@@ -399,7 +397,7 @@ public class StrictReplicaGroupInstanceSelectorTest {
     selectionResult =
         strictReplicaGroupInstanceSelector.select(_brokerRequest, Lists.newArrayList(onlineSegments), requestId);
     assertEquals(selectionResult.getSegmentToInstanceMap(), expectedReplicaGroupInstanceSelectorResult);
-    assertEquals(selectionResult.getUnavailableSegments(), ImmutableList.of(oldSeg, newSeg));
+    assertEquals(selectionResult.getUnavailableSegments(), List.of(oldSeg, newSeg));
   }
 
   // Test that we get new segment from ideal state update.
@@ -417,8 +415,8 @@ public class StrictReplicaGroupInstanceSelectorTest {
     String instance1 = "instance1";
     Set<String> enabledInstances = ImmutableSet.of(instance0, instance1);
 
-    Map<String, List<String>> idealSateMap = Map.ofEntries(Map.entry(oldSeg0, ImmutableList.of(instance0, instance1)),
-        Map.entry(oldSeg1, ImmutableList.of(instance0, instance1)));
+    Map<String, List<String>> idealSateMap = Map.ofEntries(Map.entry(oldSeg0, List.of(instance0, instance1)),
+        Map.entry(oldSeg1, List.of(instance0, instance1)));
     IdealState idealState = createIdealState(idealSateMap);
 
     // Set up external view:
@@ -426,8 +424,8 @@ public class StrictReplicaGroupInstanceSelectorTest {
     //   [segment0] -> [instance0:online, instance1:online]
     //   [segment1] -> [instance0:online, instance1:online]
     Map<String, List<Pair<String, String>>> externalViewMap = Map.ofEntries(
-        Map.entry(oldSeg0, ImmutableList.of(ImmutablePair.of(instance0, ONLINE), ImmutablePair.of(instance1, ONLINE))),
-        Map.entry(oldSeg1, ImmutableList.of(ImmutablePair.of(instance0, ONLINE), ImmutablePair.of(instance1, ONLINE))));
+        Map.entry(oldSeg0, List.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE))),
+        Map.entry(oldSeg1, List.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE))));
     ExternalView externalView = createExternalView(externalViewMap);
     StrictReplicaGroupInstanceSelector strictReplicaGroupInstanceSelector =
         new StrictReplicaGroupInstanceSelector(TABLE_NAME, _brokerMetrics, null, _propertyStore, _mutableClock);
@@ -436,13 +434,13 @@ public class StrictReplicaGroupInstanceSelectorTest {
     // Add a new segment to ideal state with missing external view.
     String newSeg = "segment2";
     onlineSegments = ImmutableSet.of(oldSeg0, oldSeg1, newSeg);
-    idealSateMap = Map.ofEntries(Map.entry(oldSeg0, ImmutableList.of(instance0, instance1)),
-        Map.entry(oldSeg1, ImmutableList.of(instance0, instance1)),
-        Map.entry(newSeg, ImmutableList.of(instance0, instance1)));
+    idealSateMap = Map.ofEntries(Map.entry(oldSeg0, List.of(instance0, instance1)),
+        Map.entry(oldSeg1, List.of(instance0, instance1)),
+        Map.entry(newSeg, List.of(instance0, instance1)));
     idealState = createIdealState(idealSateMap);
     externalViewMap = Map.ofEntries(
-        Map.entry(oldSeg0, ImmutableList.of(ImmutablePair.of(instance0, ONLINE), ImmutablePair.of(instance1, ONLINE))),
-        Map.entry(oldSeg1, ImmutableList.of(ImmutablePair.of(instance0, ONLINE), ImmutablePair.of(instance1, ONLINE))));
+        Map.entry(oldSeg0, List.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE))),
+        Map.entry(oldSeg1, List.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE))));
     externalView = createExternalView(externalViewMap);
     strictReplicaGroupInstanceSelector.onAssignmentChange(idealState, externalView, onlineSegments);
 
@@ -462,7 +460,7 @@ public class StrictReplicaGroupInstanceSelectorTest {
     selectionResult =
         strictReplicaGroupInstanceSelector.select(_brokerRequest, Lists.newArrayList(onlineSegments), requestId);
     assertEquals(selectionResult.getSegmentToInstanceMap(), expectedReplicaGroupInstanceSelectorResult);
-    assertEquals(selectionResult.getUnavailableSegments(), ImmutableList.of(oldSeg0, oldSeg1, newSeg));
+    assertEquals(selectionResult.getUnavailableSegments(), List.of(oldSeg0, oldSeg1, newSeg));
   }
 
   // Test that on instance change, we exclude not enabled instance from serving for new segments.
@@ -473,7 +471,7 @@ public class StrictReplicaGroupInstanceSelectorTest {
     // Set segment1 as new segment
     String newSeg = "segment1";
     List<Pair<String, Long>> segmentCreationTime =
-        ImmutableList.of(ImmutablePair.of(newSeg, _mutableClock.millis() - 100));
+        List.of(Pair.of(newSeg, _mutableClock.millis() - 100));
     createSegments(segmentCreationTime);
     Set<String> onlineSegments = ImmutableSet.of(oldSeg, newSeg);
 
@@ -485,8 +483,8 @@ public class StrictReplicaGroupInstanceSelectorTest {
     // Ideal states for two segments
     //   [segment0] -> [instance0:online, instance1:online]
     //   [segment1] -> [instance0:online, instance1:online]
-    Map<String, List<String>> idealSateMap = Map.ofEntries(Map.entry(oldSeg, ImmutableList.of(instance0, instance1)),
-        Map.entry(newSeg, ImmutableList.of(instance0, instance1)));
+    Map<String, List<String>> idealSateMap = Map.ofEntries(Map.entry(oldSeg, List.of(instance0, instance1)),
+        Map.entry(newSeg, List.of(instance0, instance1)));
     IdealState idealState = createIdealState(idealSateMap);
 
     // Set up external view:
@@ -494,8 +492,8 @@ public class StrictReplicaGroupInstanceSelectorTest {
     //   [segment0] -> [instance0:online, instance1:online]
     //   [segment1] -> [instance0:online]
     Map<String, List<Pair<String, String>>> externalViewMap = Map.ofEntries(
-        Map.entry(oldSeg, ImmutableList.of(ImmutablePair.of(instance0, ONLINE), ImmutablePair.of(instance1, ONLINE))),
-        Map.entry(newSeg, ImmutableList.of(ImmutablePair.of(instance0, ONLINE))));
+        Map.entry(oldSeg, List.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE))),
+        Map.entry(newSeg, List.of(Pair.of(instance0, ONLINE))));
     ExternalView externalView = createExternalView(externalViewMap);
 
     StrictReplicaGroupInstanceSelector strictReplicaGroupInstanceSelector =
@@ -513,7 +511,7 @@ public class StrictReplicaGroupInstanceSelectorTest {
 
     // Remove instance0 from enabledInstances.
     enabledInstances = ImmutableSet.of(instance1);
-    List<String> changeInstance = ImmutableList.of(instance0);
+    List<String> changeInstance = List.of(instance0);
     strictReplicaGroupInstanceSelector.onInstancesChange(enabledInstances, changeInstance);
     selectionResult =
         strictReplicaGroupInstanceSelector.select(_brokerRequest, Lists.newArrayList(onlineSegments), requestId);
@@ -529,10 +527,10 @@ public class StrictReplicaGroupInstanceSelectorTest {
     String oldSeg = "segment0";
     // Set segment1 as new segment
     String newSeg = "segment1";
-    List<Pair<String, Long>> segmentCreationTime = ImmutableList.of(
-        ImmutablePair.of(oldSeg,
+    List<Pair<String, Long>> segmentCreationTime = List.of(
+        Pair.of(oldSeg,
         _mutableClock.millis() - CommonConstants.Helix.StateModel.NEW_SEGMENT_EXPIRATION_MILLIS - 100),
-        ImmutablePair.of(newSeg, _mutableClock.millis() - 100));
+        Pair.of(newSeg, _mutableClock.millis() - 100));
     createSegments(segmentCreationTime);
     Set<String> onlineSegments = ImmutableSet.of(oldSeg, newSeg);
 
@@ -545,8 +543,8 @@ public class StrictReplicaGroupInstanceSelectorTest {
     // Ideal states for two segments
     //   [segment0] -> [instance0:online, instance1:online]
     //   [segment1] -> [instance0:online, instance1:online]
-    Map<String, List<String>> idealSateMap = Map.ofEntries(Map.entry(oldSeg, ImmutableList.of(instance0, instance1)),
-        Map.entry(newSeg, ImmutableList.of(instance0, instance1)));
+    Map<String, List<String>> idealSateMap = Map.ofEntries(Map.entry(oldSeg, List.of(instance0, instance1)),
+        Map.entry(newSeg, List.of(instance0, instance1)));
     IdealState idealState = createIdealState(idealSateMap);
 
     // Set up external view:
@@ -554,8 +552,8 @@ public class StrictReplicaGroupInstanceSelectorTest {
     //   [segment0] -> [instance2: online]
     //   [segment1] -> [instance2: online]
     Map<String, List<Pair<String, String>>> externalViewMap =
-        Map.ofEntries(Map.entry(oldSeg, ImmutableList.of(ImmutablePair.of(instance2, ONLINE))),
-            Map.entry(newSeg, ImmutableList.of(ImmutablePair.of(instance2, ONLINE))));
+        Map.ofEntries(Map.entry(oldSeg, List.of(Pair.of(instance2, ONLINE))),
+            Map.entry(newSeg, List.of(Pair.of(instance2, ONLINE))));
     ExternalView externalView = createExternalView(externalViewMap);
 
     StrictReplicaGroupInstanceSelector strictReplicaGroupInstanceSelector =
@@ -568,6 +566,6 @@ public class StrictReplicaGroupInstanceSelectorTest {
     InstanceSelector.SelectionResult selectionResult =
         strictReplicaGroupInstanceSelector.select(_brokerRequest, Lists.newArrayList(onlineSegments), requestId);
     assertEquals(selectionResult.getSegmentToInstanceMap(), expectedReplicaGroupInstanceSelectorResult);
-    assertEquals(selectionResult.getUnavailableSegments(), ImmutableList.of(oldSeg));
+    assertEquals(selectionResult.getUnavailableSegments(), List.of(oldSeg));
   }
 }
